--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "file-loader": "^1.1.5",
+    "fontface-loader": "0.0.8",
     "p5": "^0.5.16",
     "url-loader": "^0.6.2"
   }
